//指定版本
//注意proto3与proto2的写法有些不同
//protobuf官方中文文档
//https://www.jianshu.com/p/4443c28d4bf7
syntax = "proto3";

//包名，通过protoc生成时go文件时
package go_protos;

option go_package = "./go_protos";

import "imdatachain_clientbase.proto";

message ImDataChainSendText {
  ImClientBase    Base        =1;  //
  bytes           Content     =2;  //消息内容
  int64           SendTime    =3;  //发送的时间
  bytes           QuoteID     =4;  //引用消息ID
}
